# UnLeaf

./: .claudeignore  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README_EN.md  RELEASE_NOTES.md  SESSION_CONTEXT.md  build.bat  build.ps1  release.md
.github/workflows/: build.yml
docs/: Engine_Specification.md  GitHub_CI_Operation.md  UI_RULES.md
resources/: UnLeaf_Manager.manifest  app.rc  service.rc
scripts/: create_cert.ps1  install_service.bat  run_debug.bat  sign.bat  sign.ps1  sign_config.local.bat.template  sign_config.local.ps1.template  uninstall_service.bat
src/common/: config.cpp  config.h  crash_handler.cpp  crash_handler.h  logger.cpp  logger.h  registry_manager.cpp  registry_manager.h  scoped_handle.h  security.h  types.h  win_string_utils.cpp  win_string_utils.h
src/engine/: engine_logic.cpp  engine_logic.h  engine_policy.h
src/manager/: ipc_client.cpp  ipc_client.h  main.cpp  main_window.cpp  main_window.h  resource.h  service_controller.cpp  service_controller.h
src/service/: engine_core.cpp  engine_core.h  ipc_server.cpp  ipc_server.h  main.cpp  process_monitor.cpp  process_monitor.h  registry_policy.cpp  registry_policy.h  service_main.cpp  service_main.h
tests/: test_config.cpp  test_engine_logic.cpp  test_engine_policy.cpp  test_logger.cpp  test_types.cpp
